// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite > v4-vite-plugin > css 1`] = `
"view,text,:after,:before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0 solid;
}
:host,page,.tw-root,wx-root-portal-content {
  --color-gray-200: #e5e7eb;
  --color-gray-400: #9ca3af;
  --color-green-400: #4ade80;
  --color-sky-400: #38bdf8;
  --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
  --default-font-family: var(--font-sans);
  --default-mono-font-family: var(--font-mono);
}
.bg-_b_h123456_B {
    background-color: #123456;
  }
.bg-gradient-to-r {
    --tw-gradient-position: to right in oklab;
    background-image: linear-gradient(var(--tw-gradient-stops));
  }
.from-green-400 {
    --tw-gradient-from: var(--color-green-400);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
.to-sky-400 {
    --tw-gradient-to: var(--color-sky-400);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
.bg-clip-text {
    -webkit-background-clip: text;
            background-clip: text;
  }
.text-_b_h123456_B {
    color: #123456;
  }
.text-transparent {
    color: transparent;
  }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::-webkit-details-marker {
        text-overflow: clip;
      }
"
`;

exports[`vite > v4-vite-plugin > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-_b_h123456_B text-_b_h123456_B first-letter_cmarker_ctext-clip");
"
`;

exports[`vite > v4-vite-postcss > css 1`] = `
"view,text,:after,:before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0 solid;
}
:host,page,.tw-root,wx-root-portal-content {
  --color-gray-200: #e5e7eb;
  --color-gray-400: #9ca3af;
  --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
  --default-font-family: var(--font-sans);
  --default-mono-font-family: var(--font-mono);
}
.bg-_b_h123456_B {
    background-color: #123456;
  }
.text-_b_h123456_B {
    color: #123456;
  }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::-webkit-details-marker {
        text-overflow: clip;
      }
"
`;

exports[`vite > v4-vite-postcss > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-_b_h123456_B text-_b_h123456_B");
"
`;
